Fix dark mode: ion-alert, action-sheet, logs, timeline

--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -3,6 +3,8 @@
 1.1 - Backgrounds
 1.2 - Text
 1.3 - Messages
+1.4 - Borders
+1.5 - Slides
 
 2 - Transition between themes
 
@@ -45,7 +47,7 @@
   $bg-color-success: #d9fff3;
   $bg-color-info: #dde1f0;
 
-  // 1.4 - Messages
+  // 1.4 - Borders
   $border-color-dark-theme: #4c4c4c;
 
   // 1.5 - Slides
@@ -139,6 +141,11 @@
     }
   }
 
+  .royal,
+  a.royal {
+    color: $text-color-dark-theme;
+  }
+
   .item-divider-md,
   .item-divider-ios {
     background-color: $bg-color-dark-theme;
@@ -176,6 +183,28 @@
     &.error {
       background: none;
       border: 1px solid;
+    }
+  }
+
+  ion-alert {
+    .alert-wrapper {
+      background: $bg-color-dark-theme-2;
+      color: $text-color-dark-theme;
+    }
+    .alert-radio-group {
+      .alert-radio:not([aria-checked='true']) .alert-radio-label {
+        color: $text-color-dark-theme;
+      }
+    }
+  }
+
+  ion-action-sheet {
+    .action-sheet-group {
+      background: $bg-color-dark-theme-2;
+      color: $text-color-dark-theme;
+      .action-sheet-button {
+        color: $text-color-dark-theme;
+      }
     }
   }
 
@@ -258,7 +287,7 @@
         border: 0;
         background-color: $bg-color-dark-theme;
       }
-      &:not(.create-button) {
+      &:not(.create-button):not(.assertive) {
         &.item-ios,
         &.item-md {
           color: $text-color-dark-theme;
@@ -756,6 +785,18 @@
     .white-card {
       background: $bg-color-dark-theme-2;
       color: $text-color-dark-theme;
+    }
+  }
+
+  page-copayers {
+    .white-card {
+      background: $bg-color-dark-theme;
+      color: $text-color-dark-theme;
+      .timeline-content-icon ion-icon {
+        &[name='ios-time-outline'] {
+          filter: invert(1);
+        }
+      }
     }
   }
 
